# air-table

./: CHANGELOG.md  DISTRIBUTION.md  GPU_ACCELERATION.md  LICENSE  README.md  RELEASE_INSTRUCTIONS.md  codesign.conf  create-release.sh  deploy.sh  generate-icons.sh  icon-preview.html  index.html  package-lock.json  package.json
.github/workflows/: deploy-site.yml  release.yml
docs/: CNAME  index.html
scripts/: analytics-setup.sh  generate-changelog.sh  release.sh  version-bump.sh
src/: AnalysisPanel.tsx  App.css  App.tsx  CsvViewerScreen.css  CsvViewerScreen.tsx  FilePickerScreen.css  FilePickerScreen.tsx  RowDetailsPanel.tsx  VirtualizedTable.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/utils/: performance.ts
