[package]
name = "air-table"
version = "1.0.1"
description = "High-performance CSV viewer and analyzer with advanced trend analysis"
authors = ["AirTable CSV Viewer Team"]
license = "MIT"
repository = "https://github.com/your-username/air-table"
homepage = "https://github.com/your-username/air-table"
keywords = ["csv", "data", "analysis", "viewer", "productivity"]
categories = ["command-line-utilities", "data-structures"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "air_table_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

